; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/system/console/src/extr_sys_console_static.c_SYS_CONSOLE_Read.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/system/console/src/extr_sys_console_static.c_SYS_CONSOLE_Read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @SYS_CONSOLE_Read(i32 %0, i32 %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  store i64 0, i64* %9, align 8
  %11 = load i8*, i8** %7, align 8
  store i8* %11, i8** %10, align 8
  %12 = call i32 (...) @DRV_USART0_ReceiverBufferIsEmpty()
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %21, label %14

14:                                               ; preds = %4
  %15 = call signext i8 (...) @DRV_USART0_ReadByte()
  %16 = load i8*, i8** %10, align 8
  store i8 %15, i8* %16, align 1
  %17 = load i64, i64* %9, align 8
  %18 = add i64 %17, 1
  store i64 %18, i64* %9, align 8
  %19 = load i8*, i8** %10, align 8
  %20 = getelementptr inbounds i8, i8* %19, i32 1
  store i8* %20, i8** %10, align 8
  br label %21

21:                                               ; preds = %14, %4
  %22 = load i64, i64* %9, align 8
  ret i64 %22
}

declare dso_local i32 @DRV_USART0_ReceiverBufferIsEmpty(...) #1

declare dso_local signext i8 @DRV_USART0_ReadByte(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
